--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 
 		<div class="sidebar">
 			<img class="Left" src="../static/ajaj.jpg">
-			<a class="rollIn" href="index.html">Home</a>
+			<a class="rollIn" href="/">Home</a>
 			<a class="rollIn" href="hobbies.html">Hobbies</a>
 			<a class="rollIn" href="projects.html">Projects</a>
 			<a class="rollIn" href="about.html">About</a> 
