new files for herouku

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,10 +8,10 @@
 
 		<div class="sidebar">
 			<img class="Left" src="../static/ajaj.jpg">
-			<a class="rollIn" href="/">Home</a>
-			<a class="rollIn" href="hobbies.html">Hobbies</a>
-			<a class="rollIn" href="projects.html">Projects</a>
-			<a class="rollIn" href="about.html">About</a> 
-			<a class="rollIn" href="contact.html">Contact me</a>
+			<a class="rollIn" href="/home">Home</a>
+			<a class="rollIn" href="/hobbies">Hobbies</a>
+			<a class="rollIn" href="/projects">Projects</a>
+			<a class="rollIn" href="/about">About</a> 
+			<a class="rollIn" href="/contact">Contact me</a>
 		</div>
 	</head>
