new files for heroukuapp

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type"image png" href="about.png">
+		<link rel="icon" type"image png" href="../static/about.png">
 		<title>{{title}}</title>
 		<div id="logo">Ibraheem Ajaj's Website | About</div>
 	</head>
