--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type"image png" href="contacts.png">
+		<link rel="icon" type"image png" href="../static/contact.png">
 		<title>{{title}}</title>
 		<div id="logo">Ibraheem Ajaj's Website | Contact me</div>
 	</head>
