--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type"image png" href="hobbies.png">
+		<link rel="icon" type"image png" href="../static/hobbies.png">
 		<title>{{title}}</title>
 		<div id="logo">Ibraheem Ajaj's Website | Hobbies</div>
 	</head>
