--- a/templates/projects.html
+++ b/templates/projects.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type"image png" href="projects.png">
+		<link rel="icon" type"image png" href="../static/projects.png">
 		<title>{{title}}</title>
 		<div id="logo">Ibraheem Ajaj's Website | Projects</div>
 	</head>
@@ -12,13 +12,13 @@
 			<div id="game1">
 			<center><img id="game" src="../static/running.jpg">
 			<p id="cent">Running game</p>
-			<a id="d-game" title="Download" href="running.zip">Click here to download the game</a></center>
+			<a id="d-game" title="Download" href="../static/running.zip" download>Click here to download the game</a></center>
 			</div>
 
 			<div id="game2">
 			<center><img id="game" src="../static/space-in.png">
 			<p id="cent">Space Invaders game</p>
-			<a id="d-game" title="Download" href="space-in.zip">Click here to download the game</a></center>
+			<a id="d-game" title="Download" href="../static/space-in.zip" download>Click here to download the game</a></center>
 			</div>
 		</div>
 
