--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type"image png" href="home.png">
+		<link rel="icon" type"image png" href="../static/home.png">
 		<link rel="stylesheet" type="text/css" href="../static/photos.css" >
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>{{title}}</title>
@@ -27,7 +27,7 @@
 		</div>
 		<div class="mySlides fade">
 			<div class="numbertext">3 / 5</div>
-			<img src="-../static/mo3ta9em.jpg">
+			<img src="../static/asoom.jpg">
 		</div>
 		<div class="mySlides fade">
 			<div class="numbertext">4 / 5</div>	
@@ -35,7 +35,7 @@
 		</div>
 		<div class="mySlides fade">
 			<div class="numbertext">5 / 5</div>
-			<img src="../static/-ribky.jpg">
+			<img src="../static/asoom.jpg">
 		</div>
 		<div style="text-align:center">
 			<span class="dot"></span> 
